--- a/index.html
+++ b/index.html
@@ -1,158 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BusApp Support</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>BusApp Profile</title>
 
-  <style>
-    /* ألوان مناسبة لتطبيق باص */
-    :root {
-      --primary-color: #0D6EFD;   /* أزرق */
-      --primary-light: #EAF3FF;
-      --primary-dark: #084298;
-      --accent-color: #20C997;   /* أخضر */
-      --text-color: #333;
-      --bg-color: #fff;
-    }
+<style>
+  :root {
+    --primary: #FCCC10;        /* الأصفر الأساسي */
+    --primary-light: #FFFAE7;
+    --primary-dark: #B3910B;
+    --bg-dark: #1F1F1F;
+    --card: #FFFFFF;
+    --text: #333;
+  }
 
-    body {
-      font-family: 'Arial', sans-serif;
-      background-color: var(--primary-light);
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      min-height: 100vh;
-    }
+  body {
+    margin: 0;
+    font-family: 'Segoe UI', Tahoma, sans-serif;
+    background: linear-gradient(135deg, #1F1F1F, #2B2B2B);
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
-    .container {
-      background-color: var(--bg-color);
-      max-width: 720px;
-      width: 90%;
-      margin: 40px auto;
-      padding: 32px;
-      border-radius: 18px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.15);
-      transition: transform 0.2s ease;
-    }
+  .profile-card {
+    background: var(--card);
+    width: 90%;
+    max-width: 420px;
+    border-radius: 24px;
+    padding: 35px 30px;
+    text-align: center;
+    box-shadow: 0 25px 60px rgba(0,0,0,0.4);
+  }
 
-    .container:hover {
-      transform: translateY(-5px);
-    }
+  .logo {
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    background: linear-gradient(135deg, var(--primary), var(--primary-dark));
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 38px;
+    color: #1F1F1F;
+    margin: 0 auto 18px;
+    font-weight: bold;
+  }
 
-    h1 {
-      color: var(--primary-dark);
-      text-align: center;
-      margin-bottom: 10px;
-    }
+  h1 {
+    margin: 0;
+    color: var(--bg-dark);
+    font-size: 26px;
+  }
 
-    .subtitle {
-      text-align: center;
-      color: var(--text-color);
-      margin-bottom: 25px;
-      font-size: 15px;
-      opacity: 0.8;
-    }
+  .subtitle {
+    font-size: 14px;
+    color: var(--text);
+    margin: 6px 0 22px;
+    opacity: 0.8;
+  }
 
-    h3 {
-      color: var(--primary-color);
-      margin-top: 22px;
-    }
+  .info {
+    text-align: left;
+    margin-top: 20px;
+  }
 
-    p {
-      color: var(--text-color);
-      line-height: 1.7;
-      margin: 6px 0;
-    }
+  .info p {
+    margin: 10px 0;
+    font-size: 15px;
+    color: var(--text);
+  }
 
-    a {
-      color: var(--primary-dark);
-      text-decoration: none;
-      font-weight: bold;
-    }
+  .label {
+    font-weight: 600;
+    color: var(--primary-dark);
+  }
 
-    a:hover {
-      color: var(--accent-color);
-    }
+  .actions {
+    margin-top: 28px;
+    display: flex;
+    gap: 12px;
+  }
 
-    .button {
-      display: inline-block;
-      padding: 12px 22px;
-      background-color: var(--primary-color);
-      color: #fff;
-      border-radius: 10px;
-      margin-top: 12px;
-      text-decoration: none;
-      transition: background 0.2s ease;
-    }
+  .btn {
+    flex: 1;
+    padding: 12px;
+    border-radius: 14px;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 14px;
+    text-align: center;
+    transition: 0.2s ease;
+  }
 
-    .button.secondary {
-      background-color: var(--accent-color);
-    }
+  .btn.primary {
+    background: var(--primary);
+    color: #1F1F1F;
+  }
 
-    .button:hover {
-      background-color: var(--primary-dark);
-    }
+  .btn.secondary {
+    background: var(--primary-light);
+    color: var(--primary-dark);
+  }
 
-    .divider {
-      height: 1px;
-      background: #eee;
-      margin: 25px 0;
-    }
+  .btn:hover {
+    transform: translateY(-2px);
+    opacity: 0.9;
+  }
 
-    footer {
-      text-align: center;
-      font-size: 13px;
-      opacity: 0.6;
-      margin-top: 30px;
-    }
-  </style>
+  footer {
+    margin-top: 22px;
+    font-size: 12px;
+    opacity: 0.5;
+    color: var(--text);
+  }
+</style>
 </head>
 
 <body>
-  <div class="container">
 
-    <h1>BusApp Support</h1>
-    <div class="subtitle">We’re here to help you move safely and smoothly 🚌</div>
+<div class="profile-card">
+  <div class="logo">🚌</div>
 
-    <p>
-      Thank you for using <strong>BusApp</strong>.
-      If you face any issues or have questions, our support team is ready to assist you.
-    </p>
+  <h1>BusApp</h1>
+  <div class="subtitle">Smart Transportation Solution</div>
 
-    <div class="divider"></div>
-
-    <h3>Contact Support</h3>
-    <p>Email: <a href="mailto:khairiahalayyafi@gmail.com">khairiahalayyafi@gmail.com</a></p>
-    <p>WhatsApp: <a href="https://wa.me/966XXXXXXXXX">+966 XXXXXXXXX</a></p>
-    <p>Emergency Line: <strong>9200XXXX</strong></p>
-
-    <h3>Support Hours</h3>
-    <p>Sunday – Thursday: 8:00 AM – 6:00 PM</p>
-
-    <h3>User Type</h3>
-    <p>• Passenger</p>
-    <p>• Driver</p>
-
-    <h3>Developer</h3>
-    <p>Khairiah Alayyafi</p>
-
-    <h3>App Version</h3>
-    <p>1.0.0</p>
-
-    <h3>Privacy Policy</h3>
-    <a class="button" href="privacy.html">View Privacy Policy</a>
-
-    <h3>Download App</h3>
-    <a class="button secondary" href="#">Google Play</a>
-    <a class="button secondary" href="#">App Store</a>
-
-    <footer>
-      © 2025 BusApp — Safe Rides, Smart Routes
-    </footer>
-
+  <div class="info">
+    <p><span class="label">Developer:</span> Khairiah Alayyafi</p>
+    <p><span class="label">Version:</span> 1.0.0</p>
+    <p><span class="label">Users:</span> Passengers & Drivers</p>
   </div>
+
+  <div class="actions">
+    <a href="privacy.html" class="btn primary">Privacy Policy</a>
+    <a href="support.html" class="btn secondary">Support</a>
+  </div>
+
+  <footer>
+    © 2025 BusApp
+  </footer>
+</div>
+
 </body>
 </html>
