--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 
   <header>
     <div class="brand">
-      <div class="avatar">🚌</div>
+      <div class="avatar">🛡️</div>
       <div>
-        <h1>معلومات التطبيق والتواصل</h1>
+        <h1>معلومات تطبيق أمان والتواصل</h1>
         <div class="sub">صفحة تعريفية رسمية</div>
       </div>
     </div>
@@ -105,12 +105,11 @@
   </header>
 
   <main>
-    <div class="tagline">نرحب بكم في <span class="typing" id="typing-area">تطبيق الباصات</span></div>
+    <div class="tagline">نرحب بكم في <span class="typing" id="typing-area">تطبيق أمان</span></div>
     <p class="lead">
-      تطبيق الباصات هو الحل الأمثل للتنقل السلس والآمن داخل المملكة. يوفر التطبيق تتبع مباشر للباصات، 
-      جداول دقيقة، إشعارات عند اقتراب الباص من موقعك، وحجز مقاعد بطريقة سهلة وآمنة. 
-      نحرص على تقديم تجربة مستخدم ممتعة، مع الالتزام بالخصوصية وحماية بيانات المستخدمين.
-      كما يتيح التطبيق إمكانية الدفع الإلكتروني ومتابعة مسار الباص في الوقت الفعلي، لضمان وصولك في الوقت المحدد.
+      تطبيق <strong>أمان</strong> يقدّم لك تجربة متكاملة لحماية بياناتك وتأمين معلوماتك الشخصية أثناء استخدام الإنترنت والتطبيقات.
+      يوفر التطبيق ميزات قوية مثل التشفير الكامل للبيانات، تنبيهات الأمان الفوريّة، وإدارة كلمات المرور بطريقة سهلة وآمنة.
+      كما يمكنك التواصل معنا مباشرة لأي استفسار أو دعم، مع ضمان الخصوصية والموثوقية لجميع المستخدمين.
     </p>
 
     <div class="cards">
@@ -124,7 +123,7 @@
       </div>
       <div class="card">
         <h3>✉️ البريد الإلكتروني</h3>
-        <p>info@busapp.com</p>
+        <p>khairiahalayyafi@gmail.com</p>
       </div>
       <div class="card">
         <h3>🔒 سياسة الخصوصية</h3>
@@ -147,7 +146,6 @@
         <div class="skill">خصوصية</div>
         <div class="skill">موثوقية</div>
         <div class="skill">أمان</div>
-        <div class="skill">دقة</div>
         <div class="skill">راحة</div>
       </div>
     </div>
@@ -156,15 +154,15 @@
   <footer>
     <h3>تواصل معنا</h3>
     <p>📞 الهاتف: 0545401699</p>
-    <p>📧 البريد الإلكتروني: <a href="mailto:info@busapp.com">info@busapp.com</a></p>
+    <p>📧 البريد الإلكتروني: <a href="mailto:khairiahalayyafi@gmail.com">khairiahalayyafi@gmail.com</a></p>
     <p>🏢 العنوان: المملكة العربية السعودية</p>
-    <p>© 2025 — جميع الحقوق محفوظة | تطبيق الباصات يضمن الخصوصية والأمان لجميع المستخدمين</p>
+    <p>© 2025 — جميع الحقوق محفوظة | تطبيق <strong>أمان</strong> يضمن الخصوصية والأمان لجميع المستخدمين</p>
   </footer>
 
 </div>
 
 <script>
-  const words=["تطبيق الباصات","التواصل معنا","سياسة الخصوصية"];
+  const words=["تطبيق أمان","التواصل معنا","سياسة الخصوصية"];
   let i=0;
   const el=document.getElementById("typing-area");
   setInterval(()=>{el.textContent=words[i++%words.length];},1400);
